--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -1,10 +1,10 @@
 !!! 5
 %html
   %head
-    %title Yo
+    %title Fun
     %link{:href => '/stylesheets/screen.css', :media => 'all', :rel => 'stylesheet', :type => 'text/css'}
     %script{:src => 'https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js', :type => 'text/javascript'}
     %script{:src => '/javascripts/application.js', :type => 'text/javascript'}
   %body
     %header
-      %h1 Yo
+      %h1 Fun, Have It!
