--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -6,5 +6,6 @@
     %script{:src => 'https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js', :type => 'text/javascript'}
     %script{:src => '/javascripts/application.js', :type => 'text/javascript'}
   %body
-    %header
-      %h1 Fun, Have It!
+    #container.container
+      %header
+        %h1 Fun, Have It!
