--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -1,3 +1,8 @@
+:ruby
+  def render_partial(path)
+    Haml::Engine.new(IO.read(path)).render
+  end
+
 !!! 5
 %html
   %head
@@ -9,3 +14,5 @@
     #container.container
       %header
         %h1 Fun, Have It!
+
+      = render_partial 'app/views/test.html.haml'
